# lokalise-tutorials

./: README.md
android-i18n/: local.properties  settings.gradle
angular-i18n/: README.md  angular.json  firebase.json  package.json
angular-transloco-i18n/: README.md  angular.json  firebase.json  package.json  transloco.config.ts
asp-net-core-i18n/: ASPLokaliseDemo.sln  Program.cs  README.md
beego-i18n/: README.md  go.mod  go.sum  main.go
django-i18n-advanced/: db.sqlite3
fastapi-i18n/: README.md  pyproject.toml
fastapi-i18n/fastapi_i18n_demo/: config.py  main.py
fastapi-i18n/i18n/: utils.py
fastapi-i18n/locales/en/: messages.json
fastapi-i18n/locales/fr/: messages.json
fastapi-i18n/locales/he/: messages.json
flutter-i18n/: README.md  pubspec.yaml
gatsby-i18n/: README.md  gatsby-config.js  package-lock.json  package.json
gettext-i18n/: Makefile  README.md  app.py  pyproject.toml
go-i18n/: go.mod  main.go
laravel-i18n/: README.md
lokalise-ai-pipeline-webhooks/: README.md  biome.json  package.json  tsconfig.json  tsup.config.ts
lokalise-oauth2/: README.md
next-i18n/: i18n.config.ts  next-globe-gen.d.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
node-express-i18n/: README.md  package.json
nuxt-i18n/: README.md  app.vue  nuxt.config.ts  package.json
rails-i18n/: Dockerfile  Gemfile  README.md
react-i18n/: package-lock.json  package.json
react-i18next/: i18n-parser.config.js
ruby-i18n/: README.md
spring-boot-i18n/: README.md  build.gradle  pom.xml  settings.gradle
svelte-i18n/: README.md  (+2 more)
(+318 files in other folders)
