[project]
name = "fastapi-i18n-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "bodrovis",email = "bodrovis@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "babel (>=2.17.0,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
